// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bindings Invalid channel header get filtered 1`] = `
[
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "2",
    "bindings": [
      {
        "app_id": "2",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "icon": "icon",
        "label": "b",
        "location": "/channel_header/locB",
      },
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "c",
        "location": "/channel_header/locC",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "2",
    "bindings": [
      {
        "app_id": "2",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "icon": "icon",
        "label": "c",
        "location": "/channel_header/locC",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "3",
    "bindings": [
      {
        "app_id": "3",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "locB",
        "location": "/channel_header/locB",
      },
      {
        "app_id": "3",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "c",
        "location": "/channel_header/locC",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "3",
    "bindings": [
      {
        "app_id": "3",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "c",
        "location": "/command/locC",
      },
    ],
    "location": "/command",
  },
]
`;

exports[`bindings Invalid commands get filtered 1`] = `
[
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locB",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "icon": "icon",
        "label": "b",
        "location": "/channel_header/locB",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "3",
    "bindings": [
      {
        "app_id": "3",
        "bindings": [
          {
            "app_id": "3",
            "form": {
              "submit": {
                "path": "/submit_url",
              },
            },
            "label": "c2",
            "location": "/command/locC/subC2",
          },
        ],
        "label": "c",
        "location": "/command/locC",
      },
    ],
    "location": "/command",
  },
  {
    "app_id": "2",
    "bindings": [
      {
        "app_id": "2",
        "bindings": [
          {
            "app_id": "2",
            "form": {
              "submit": {
                "path": "/submit_url",
              },
            },
            "label": "c1",
            "location": "/command/locC/subC1",
          },
          {
            "app_id": "2",
            "form": {
              "submit": {
                "path": "/submit_url",
              },
            },
            "label": "c2",
            "location": "/command/locC/subC2",
          },
        ],
        "label": "c",
        "location": "/command/locC",
      },
    ],
    "location": "/command",
  },
]
`;

exports[`bindings Invalid post menu get filtered 1`] = `
[
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locB",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "2",
    "bindings": [
      {
        "app_id": "2",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
      {
        "app_id": "2",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "b",
        "location": "/post_menu/locB",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "icon": "icon",
        "label": "b",
        "location": "/channel_header/locB",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "3",
    "bindings": [
      {
        "app_id": "3",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "c",
        "location": "/command/locC",
      },
    ],
    "location": "/command",
  },
]
`;

exports[`bindings No element get filtered 1`] = `
[
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "2",
    "bindings": [
      {
        "app_id": "2",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "a",
        "location": "/post_menu/locA",
      },
    ],
    "location": "/post_menu",
  },
  {
    "app_id": "1",
    "bindings": [
      {
        "app_id": "1",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "icon": "icon",
        "label": "b",
        "location": "/channel_header/locB",
      },
    ],
    "location": "/channel_header",
  },
  {
    "app_id": "3",
    "bindings": [
      {
        "app_id": "3",
        "form": {
          "submit": {
            "path": "/submit_url",
          },
        },
        "label": "c",
        "location": "/command/locC",
      },
    ],
    "location": "/command",
  },
]
`;
